--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# J/ψ → K⁰ Σ⁺ p̅\n",
     "\n",
@@ -26,11 +28,10 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
-    "import itertools\n",
     "import logging\n",
     "import os\n",
     "import warnings\n",
-    "from typing import TYPE_CHECKING, Any, Iterable\n",
+    "from typing import TYPE_CHECKING, Any\n",
     "\n",
     "import graphviz\n",
     "import jax.numpy as jnp\n",
@@ -45,15 +46,15 @@
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder, _get_particle\n",
-    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder, get_particle\n",
+    "from ampform_dpd.adapter.qrules import to_three_body_decay\n",
+    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecayChain\n",
     "from ampform_dpd.io import (\n",
     "    as_markdown_table,\n",
     "    aslatex,\n",
     "    perform_cached_lambdify,\n",
     "    simplify_latex_rendering,\n",
     ")\n",
-    "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
@@ -97,7 +98,7 @@
     "    initial_state=\"J/psi(1S)\",\n",
     "    final_state=[\"K0\", \"Sigma+\", \"p~\"],\n",
     "    allowed_interaction_types=\"strong\",\n",
-    "    formalism=\"helicity\",  # AmpForm-DPD already generates LS couplings\n",
+    "    formalism=\"canonical-helicity\",\n",
     "    mass_conservation_factor=0.05,\n",
     ")\n",
     "REACTION = relabel_edge_ids(REACTION)\n",
@@ -109,31 +110,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "hide-input"
     ]
    },
    "outputs": [],
    "source": [
-    "PDG = qrules.load_pdg()\n",
-    "PARTICLE_DB = {\n",
-    "    p.name: Particle(\n",
-    "        name=p.name,\n",
-    "        latex=p.latex,\n",
-    "        spin=p.spin,\n",
-    "        parity=int(p.parity),\n",
-    "        mass=p.mass,\n",
-    "        width=p.width,\n",
-    "    )\n",
-    "    for p in PDG\n",
-    "    if p.parity is not None\n",
-    "}\n",
-    "Jpsi = PARTICLE_DB[\"J/psi(1S)\"]\n",
-    "K = PARTICLE_DB[\"K0\"]\n",
-    "Σ = PARTICLE_DB[\"Sigma+\"]\n",
-    "pbar = PARTICLE_DB[\"p~\"]\n",
-    "PARTICLE_TO_ID = {Jpsi: 0, K: 1, Σ: 2, pbar: 3}\n",
-    "Markdown(as_markdown_table(list(PARTICLE_TO_ID)))"
+    "DECAY = to_three_body_decay(REACTION.transitions, min_ls=True)\n",
+    "Markdown(as_markdown_table([DECAY.initial_state, *DECAY.final_state.values()]))"
    ]
   },
   {
@@ -149,17 +136,11 @@
    },
    "outputs": [],
    "source": [
-    "resonance_names = [\n",
-    "    \"Sigma(1660)~-\",\n",
-    "    \"Sigma(1670)~-\",\n",
-    "    \"Sigma(1750)~-\",\n",
-    "    \"Sigma(1775)~-\",\n",
-    "    \"Sigma(1910)~-\",\n",
-    "    \"N(1700)+\",\n",
-    "    \"N(1710)+\",\n",
-    "    \"N(1720)+\",\n",
-    "]\n",
-    "resonances = sorted(PARTICLE_DB[name] for name in resonance_names)\n",
+    "resonances = sorted(\n",
+    "    {t.resonance for t in DECAY.chains},\n",
+    "    key=lambda p: (p.name[0], p.mass),\n",
+    ")\n",
+    "resonance_names = [p.name for p in resonances]\n",
     "Markdown(as_markdown_table(resonances))"
    ]
   },
@@ -167,87 +148,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": [
      "hide-input"
     ]
    },
    "outputs": [],
    "source": [
-    "def load_three_body_decay(\n",
-    "    resonance_names: Iterable[str],\n",
-    "    particle_definitions: dict[str, Particle],\n",
-    "    min_ls: bool = True,\n",
-    ") -> ThreeBodyDecay:\n",
-    "    resonances = [particle_definitions[name] for name in resonance_names]\n",
-    "    chains: list[ThreeBodyDecayChain] = []\n",
-    "    for res in resonances:\n",
-    "        chains.extend(_create_isobar(res, min_ls))\n",
-    "    return ThreeBodyDecay(\n",
-    "        states={state_id: particle for particle, state_id in PARTICLE_TO_ID.items()},\n",
-    "        chains=tuple(sorted(chains)),\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def _create_isobar(resonance: Particle, min_ls: bool) -> list[ThreeBodyDecayChain]:\n",
-    "    if resonance.name.startswith(\"Sigma\"):\n",
-    "        child1, child2, spectator = pbar, K, Σ\n",
-    "    elif resonance.name.startswith(\"N\"):\n",
-    "        child1, child2, spectator = K, Σ, pbar\n",
-    "    elif resonance.name.startswith(\"K\"):\n",
-    "        child1, child2, spectator = Σ, pbar, K\n",
-    "    else:\n",
-    "        raise NotImplementedError\n",
-    "    prod_ls_couplings = _generate_ls(Jpsi, resonance, spectator, conserve_parity=True)\n",
-    "    dec_ls_couplings = _generate_ls(resonance, child1, child2, conserve_parity=True)\n",
-    "    if min_ls:\n",
-    "        decay = IsobarNode(\n",
-    "            parent=Jpsi,\n",
-    "            child1=IsobarNode(\n",
-    "                parent=resonance,\n",
-    "                child1=child1,\n",
-    "                child2=child2,\n",
-    "                interaction=min(dec_ls_couplings),\n",
-    "            ),\n",
-    "            child2=spectator,\n",
-    "            interaction=min(prod_ls_couplings),\n",
-    "        )\n",
-    "        return [ThreeBodyDecayChain(decay)]\n",
-    "    chains = []\n",
-    "    for dec_ls, prod_ls in itertools.product(dec_ls_couplings, prod_ls_couplings):\n",
-    "        decay = IsobarNode(\n",
-    "            parent=Jpsi,\n",
-    "            child1=IsobarNode(\n",
-    "                parent=resonance,\n",
-    "                child1=child1,\n",
-    "                child2=child2,\n",
-    "                interaction=dec_ls,\n",
-    "            ),\n",
-    "            child2=spectator,\n",
-    "            interaction=prod_ls,\n",
-    "        )\n",
-    "        chains.append(ThreeBodyDecayChain(decay))\n",
-    "    return chains\n",
-    "\n",
-    "\n",
-    "def _generate_ls(\n",
-    "    parent: Particle, child1: Particle, child2: Particle, conserve_parity: bool\n",
-    ") -> list[tuple[int, sp.Rational]]:\n",
-    "    ls = generate_ls_couplings(parent.spin, child1.spin, child2.spin)\n",
-    "    if conserve_parity:\n",
-    "        return filter_parity_violating_ls(\n",
-    "            ls, parent.parity, child1.parity, child2.parity\n",
-    "        )\n",
-    "    return ls\n",
-    "\n",
-    "\n",
-    "DECAY = load_three_body_decay(\n",
-    "    resonance_names,\n",
-    "    particle_definitions=PARTICLE_DB,\n",
-    "    min_ls=True,\n",
-    ")\n",
     "Latex(aslatex(DECAY, with_jp=True))"
    ]
   },
@@ -347,7 +253,7 @@
     "    angular_momentum: Any\n",
     "    meson_radius: Any\n",
     "\n",
-    "    _latex_repr_ = R\"\\mathcal{{F}}_{{{angular_momentum}}}\\left({s}, {m1}, {m1}\\right)\"\n",
+    "    _latex_repr_ = R\"\\mathcal{{F}}_{{{angular_momentum}}}\\left({s}, {m1}, {m2}\\right)\"\n",
     "\n",
     "    def evaluate(self):\n",
     "        s, m1, m2, angular_momentum, meson_radius = self.args\n",
@@ -391,14 +297,16 @@
     "    production_node = decay_chain.decay\n",
     "    assert isinstance(production_node.child1, IsobarNode), \"Not a 3-body isobar decay\"\n",
     "    decay_node = production_node.child1\n",
-    "\n",
     "    s = _get_mandelstam_s(decay_chain)\n",
     "    parameter_defaults = {}\n",
     "    production_ff, new_pars = _create_form_factor(s, production_node)\n",
+    "    _is_messed_up(new_pars)\n",
     "    parameter_defaults.update(new_pars)\n",
     "    decay_ff, new_pars = _create_form_factor(s, decay_node)\n",
+    "    _is_messed_up(new_pars)\n",
     "    parameter_defaults.update(new_pars)\n",
     "    breit_wigner, new_pars = _create_breit_wigner(s, decay_node)\n",
+    "    _is_messed_up(new_pars)\n",
     "    parameter_defaults.update(new_pars)\n",
     "    return (\n",
     "        production_ff * decay_ff * breit_wigner,\n",
@@ -406,11 +314,20 @@
     "    )\n",
     "\n",
     "\n",
+    "def _is_messed_up(parameter_defaults):\n",
+    "    for key in parameter_defaults:\n",
+    "        if key.name == \"m0\" and not key.is_nonnegative:\n",
+    "            raise ValueError\n",
+    "\n",
+    "\n",
     "def _create_form_factor(\n",
     "    s: sp.Symbol, isobar: IsobarNode\n",
     ") -> tuple[sp.Expr, dict[sp.Symbol, float]]:\n",
     "    assert isobar.interaction is not None, \"Need LS-couplings\"\n",
-    "    inv_mass = _create_mass_symbol(isobar.parent)\n",
+    "    if isobar.parent.name == \"J/psi(1S)\":\n",
+    "        inv_mass = sp.Symbol(\"m0\", nonnegative=True)\n",
+    "    else:\n",
+    "        inv_mass = _get_mandelstam_s(isobar)\n",
     "    outgoing_state_mass1 = _create_mass_symbol(isobar.child1)\n",
     "    outgoing_state_mass2 = _create_mass_symbol(isobar.child2)\n",
     "    meson_radius = _create_meson_radius_symbol(isobar.parent)\n",
@@ -423,7 +340,11 @@
     "    )\n",
     "    parameter_defaults = {\n",
     "        meson_radius: 1,\n",
+    "        outgoing_state_mass1: get_particle(isobar.child1).mass,\n",
+    "        outgoing_state_mass2: get_particle(isobar.child2).mass,\n",
     "    }\n",
+    "    if not inv_mass.name.startswith(\"s\"):\n",
+    "        parameter_defaults[inv_mass] = get_particle(isobar).mass\n",
     "    return form_factor, parameter_defaults\n",
     "\n",
     "\n",
@@ -456,31 +377,35 @@
     "\n",
     "\n",
     "def _create_meson_radius_symbol(isobar: IsobarNode) -> sp.Symbol:\n",
-    "    if _get_particle(isobar) is Jpsi:\n",
+    "    if get_particle(isobar).name == \"J/psi(1S)\":\n",
     "        return sp.Symbol(R\"R_{J/\\psi}\")\n",
     "    return sp.Symbol(R\"R_\\mathrm{res}\")\n",
     "\n",
     "\n",
     "def _create_mass_symbol(particle: IsobarNode | Particle) -> sp.Symbol:\n",
-    "    particle = _get_particle(particle)\n",
-    "    state_id = PARTICLE_TO_ID.get(particle)\n",
-    "    if state_id is not None:\n",
-    "        return sp.Symbol(f\"m{state_id}\", nonnegative=True)\n",
+    "    particle = get_particle(particle)\n",
     "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)\n",
     "\n",
     "\n",
-    "def _get_mandelstam_s(decay: ThreeBodyDecayChain) -> sp.Symbol:\n",
+    "def _get_mandelstam_s(decay: ThreeBodyDecayChain | IsobarNode) -> sp.Symbol:\n",
     "    s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
-    "    m1, m2, m3 = map(_create_mass_symbol, [K, Σ, pbar])\n",
-    "    decay_masses = {_create_mass_symbol(p) for p in decay.decay_products}\n",
-    "    if decay_masses == {m2, m3}:\n",
+    "    decay_products = {p.name for p in _get_decay_products(decay)}\n",
+    "    if decay_products == {\"Sigma+\", \"p~\"}:\n",
     "        return s1\n",
-    "    if decay_masses == {m1, m3}:\n",
+    "    if decay_products == {\"K0\", \"p~\"}:\n",
     "        return s2\n",
-    "    if decay_masses == {m1, m2}:\n",
+    "    if decay_products == {\"K0\", \"Sigma+\"}:\n",
     "        return s3\n",
-    "    msg = f\"Cannot find Mandelstam variable for {''.join(decay_masses)}\"\n",
-    "    raise NotImplementedError(msg)"
+    "    msg = f\"Cannot find Mandelstam variable for {', '.join(decay_products)}\"\n",
+    "    raise NotImplementedError(msg)\n",
+    "\n",
+    "\n",
+    "def _get_decay_products(\n",
+    "    decay: ThreeBodyDecayChain | IsobarNode,\n",
+    ") -> tuple[Particle, Particle]:\n",
+    "    if isinstance(decay, ThreeBodyDecayChain):\n",
+    "        return decay.decay_products\n",
+    "    return decay.children"
    ]
   },
   {
@@ -540,29 +465,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "masses = {\n",
-    "    _create_mass_symbol(Jpsi): Jpsi.mass,\n",
-    "    _create_mass_symbol(K): K.mass,\n",
-    "    _create_mass_symbol(Σ): Σ.mass,\n",
-    "    _create_mass_symbol(pbar): pbar.mass,\n",
-    "}\n",
-    "model.parameter_defaults.update(masses)\n",
-    "Latex(aslatex(masses))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -573,9 +475,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": [
      "hide-input",
      "full-width",
@@ -700,6 +599,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "masses = {\n",
+    "    symbol: value\n",
+    "    for symbol, value in model.parameter_defaults.items()\n",
+    "    if str(symbol).startswith(\"m\")\n",
+    "    if len(str(symbol)) == 2\n",
+    "}\n",
+    "Latex(aslatex(masses))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +670,7 @@
    "outputs": [],
    "source": [
     "s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
-    "m0, m1, m2, m3 = sorted(masses, key=str)\n",
+    "m0, m1, m2, m3 = sp.symbols(\"m:4\", nonnegative=True)\n",
     "s1_expr = compute_third_mandelstam(s3, s2, m0, m1, m2, m3)\n",
     "Latex(aslatex({s1: s1_expr}))"
    ]
@@ -933,14 +854,14 @@
     "i1, i2 = 0, 0\n",
     "for chain in tqdm(model.decay.chains, disable=NO_TQDM):\n",
     "    resonance = chain.resonance\n",
-    "    decay_product = set(chain.decay_products)\n",
-    "    if decay_product == {K, Σ}:\n",
+    "    decay_product = {p.name for p in chain.decay_products}\n",
+    "    if decay_product == {\"K0\", \"Sigma+\"}:\n",
     "        ax = ax1\n",
     "        i1 += 1\n",
     "        i = i1\n",
     "        projection_axis = 0\n",
     "        x_data = x\n",
-    "    elif decay_product == {K, pbar}:\n",
+    "    elif decay_product == {\"K0\", \"p~\"}:\n",
     "        ax = ax2\n",
     "        i2 += 1\n",
     "        i = i2\n",
