--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -26,20 +26,22 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
-    "import itertools\n",
-    "from typing import Iterable\n",
+    "import warnings\n",
     "\n",
+    "import graphviz\n",
     "import qrules\n",
     "import sympy as sp\n",
+    "from ampform.helicity.align.dpd import relabel_edge_ids\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
-    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecay, ThreeBodyDecayChain\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder, get_particle\n",
+    "from ampform_dpd.adapter.qrules import load_particles, to_three_body_decay\n",
+    "from ampform_dpd.decay import IsobarNode, Particle, ThreeBodyDecayChain\n",
     "from ampform_dpd.dynamics import BreitWignerMinL\n",
     "from ampform_dpd.io import as_markdown_table, aslatex, simplify_latex_rendering\n",
-    "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
-    "simplify_latex_rendering()"
+    "simplify_latex_rendering()\n",
+    "warnings.simplefilter(\"ignore\")"
    ]
   },
   {
@@ -62,33 +64,35 @@
    },
    "outputs": [],
    "source": [
-    "PDG = qrules.load_pdg()\n",
-    "PARTICLE_DB = {\n",
-    "    p.name: Particle(\n",
-    "        name=p.name,\n",
-    "        latex=p.latex,\n",
-    "        spin=p.spin,\n",
-    "        parity=int(p.parity),\n",
-    "        mass=p.mass,\n",
-    "        width=p.width,\n",
-    "    )\n",
-    "    for p in PDG\n",
-    "    if p.parity is not None\n",
-    "}\n",
-    "PARTICLE_DB[\"Lambda(2000)\"] = Particle(\n",
-    "    name=\"Lambda(2000)\",\n",
-    "    latex=R\"\\Lambda(2000)\",\n",
-    "    spin=0.5,\n",
-    "    parity=-1,\n",
-    "    mass=2.0,\n",
-    "    width=(0.020 + 0.400) / 2,\n",
+    "PARTICLES = load_particles()\n",
+    "for name in [\n",
+    "    \"K*(1410)~0\",\n",
+    "    \"K(2)*(1430)~0\",\n",
+    "    \"K*(1680)~0\",\n",
+    "    \"Delta(1620)++\",\n",
+    "    \"Delta(1900)++\",\n",
+    "    \"Delta(1910)++\",\n",
+    "    \"Delta(1920)++\",\n",
+    "    \"Lambda(1800)\",\n",
+    "    \"Lambda(1810)\",\n",
+    "    \"Lambda(1890)\",\n",
+    "]:\n",
+    "    PARTICLES.remove(PARTICLES[name])\n",
+    "STM = qrules.StateTransitionManager(\n",
+    "    initial_state=[\"Lambda(c)+\"],\n",
+    "    final_state=[\"p\", \"K-\", \"pi+\"],\n",
+    "    mass_conservation_factor=3,\n",
+    "    allowed_intermediate_particles=[\"K\", \"Delta\", \"Lambda\"],\n",
+    "    particle_db=PARTICLES,\n",
+    "    max_angular_momentum=2,\n",
+    "    formalism=\"canonical-helicity\",\n",
     ")\n",
-    "Λc = PARTICLE_DB[\"Lambda(c)+\"]\n",
-    "p = PARTICLE_DB[\"p\"]\n",
-    "π = PARTICLE_DB[\"pi+\"]\n",
-    "K = PARTICLE_DB[\"K-\"]\n",
-    "PARTICLE_TO_ID = {Λc: 0, p: 1, π: 2, K: 3}\n",
-    "Markdown(as_markdown_table(list(PARTICLE_TO_ID)))"
+    "STM.set_allowed_interaction_types([qrules.InteractionType.STRONG], node_id=1)\n",
+    "problem_sets = STM.create_problem_sets()\n",
+    "REACTION = STM.find_solutions(problem_sets)\n",
+    "REACTION = relabel_edge_ids(REACTION)\n",
+    "dot = qrules.io.asdot(REACTION, collapse_graphs=True)\n",
+    "graphviz.Source(dot)"
    ]
   },
   {
@@ -104,21 +108,28 @@
    },
    "outputs": [],
    "source": [
-    "resonance_names = [\n",
-    "    \"Lambda(1405)\",\n",
-    "    \"Lambda(1520)\",\n",
-    "    \"Lambda(1600)\",\n",
-    "    \"Lambda(1670)\",\n",
-    "    \"Lambda(1690)\",\n",
-    "    \"Lambda(2000)\",\n",
-    "    \"Delta(1232)+\",\n",
-    "    \"Delta(1600)+\",\n",
-    "    \"Delta(1700)+\",\n",
-    "    \"K(0)*(700)+\",\n",
-    "    \"K*(892)0\",\n",
-    "    \"K(2)*(1430)0\",\n",
-    "]\n",
-    "resonances = [PARTICLE_DB[name] for name in resonance_names]\n",
+    "DECAY = to_three_body_decay(REACTION.transitions, min_ls=True)\n",
+    "Markdown(as_markdown_table([DECAY.initial_state, *DECAY.final_state.values()]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "resonances = sorted(\n",
+    "    {t.resonance for t in DECAY.chains},\n",
+    "    key=lambda p: (p.name[0], p.mass),\n",
+    ")\n",
+    "resonance_names = [p.name for p in resonances]\n",
     "Markdown(as_markdown_table(resonances))"
    ]
   },
@@ -126,87 +137,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": [
      "hide-input"
     ]
    },
    "outputs": [],
    "source": [
-    "def load_three_body_decay(\n",
-    "    resonance_names: Iterable[str],\n",
-    "    particle_definitions: dict[str, Particle],\n",
-    "    min_ls: bool = True,\n",
-    ") -> ThreeBodyDecay:\n",
-    "    resonances = [particle_definitions[name] for name in resonance_names]\n",
-    "    chains: list[ThreeBodyDecayChain] = []\n",
-    "    for res in resonances:\n",
-    "        chains.extend(_create_isobar(res, min_ls))\n",
-    "    return ThreeBodyDecay(\n",
-    "        states={state_id: particle for particle, state_id in PARTICLE_TO_ID.items()},\n",
-    "        chains=tuple(chains),\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def _create_isobar(resonance: Particle, min_ls: bool) -> list[ThreeBodyDecayChain]:\n",
-    "    if resonance.name.startswith(\"K\"):\n",
-    "        child1, child2, spectator = π, K, p\n",
-    "    elif resonance.name.startswith(\"L\"):\n",
-    "        child1, child2, spectator = K, p, π\n",
-    "    elif resonance.name.startswith(\"D\"):\n",
-    "        child1, child2, spectator = p, π, K\n",
-    "    else:\n",
-    "        raise NotImplementedError\n",
-    "    prod_ls_couplings = _generate_ls(Λc, resonance, spectator, conserve_parity=False)\n",
-    "    dec_ls_couplings = _generate_ls(resonance, child1, child2, conserve_parity=True)\n",
-    "    if min_ls:\n",
-    "        decay = IsobarNode(\n",
-    "            parent=Λc,\n",
-    "            child1=IsobarNode(\n",
-    "                parent=resonance,\n",
-    "                child1=child1,\n",
-    "                child2=child2,\n",
-    "                interaction=min(dec_ls_couplings),\n",
-    "            ),\n",
-    "            child2=spectator,\n",
-    "            interaction=min(prod_ls_couplings),\n",
-    "        )\n",
-    "        return [ThreeBodyDecayChain(decay)]\n",
-    "    chains = []\n",
-    "    for dec_ls, prod_ls in itertools.product(dec_ls_couplings, prod_ls_couplings):\n",
-    "        decay = IsobarNode(\n",
-    "            parent=Λc,\n",
-    "            child1=IsobarNode(\n",
-    "                parent=resonance,\n",
-    "                child1=child1,\n",
-    "                child2=child2,\n",
-    "                interaction=dec_ls,\n",
-    "            ),\n",
-    "            child2=spectator,\n",
-    "            interaction=prod_ls,\n",
-    "        )\n",
-    "        chains.append(ThreeBodyDecayChain(decay))\n",
-    "    return chains\n",
-    "\n",
-    "\n",
-    "def _generate_ls(\n",
-    "    parent: Particle, child1: Particle, child2: Particle, conserve_parity: bool\n",
-    ") -> list[tuple[int, sp.Rational]]:\n",
-    "    ls = generate_ls_couplings(parent.spin, child1.spin, child2.spin)\n",
-    "    if conserve_parity:\n",
-    "        return filter_parity_violating_ls(\n",
-    "            ls, parent.parity, child1.parity, child2.parity\n",
-    "        )\n",
-    "    return ls\n",
-    "\n",
-    "\n",
-    "DECAY = load_three_body_decay(\n",
-    "    resonance_names,\n",
-    "    particle_definitions=PARTICLE_DB,\n",
-    "    min_ls=True,\n",
-    ")\n",
     "Latex(aslatex(DECAY, with_jp=True))"
    ]
   },
@@ -256,13 +192,15 @@
     "    decay_chain: ThreeBodyDecayChain,\n",
     ") -> tuple[BreitWignerMinL, dict[sp.Symbol, float]]:\n",
     "    s = _get_mandelstam_s(decay_chain)\n",
-    "    child1_mass, child2_mass = map(_to_mass_symbol, decay_chain.decay_products)\n",
+    "    child1_mass, child2_mass = map(_create_mass_symbol, decay_chain.decay_products)\n",
     "    l_dec = sp.Rational(decay_chain.outgoing_ls.L)\n",
     "    l_prod = sp.Rational(decay_chain.incoming_ls.L)\n",
-    "    parent_mass = sp.Symbol(f\"m_{{{decay_chain.parent.latex}}}\")\n",
-    "    spectator_mass = sp.Symbol(f\"m_{{{decay_chain.spectator.latex}}}\")\n",
-    "    resonance_mass = sp.Symbol(f\"m_{{{decay_chain.resonance.latex}}}\")\n",
-    "    resonance_width = sp.Symbol(Rf\"\\Gamma_{{{decay_chain.resonance.latex}}}\")\n",
+    "    parent_mass = sp.Symbol(f\"m_{{{decay_chain.parent.latex}}}\", nonnegative=True)\n",
+    "    spectator_mass = sp.Symbol(f\"m_{{{decay_chain.spectator.latex}}}\", nonnegative=True)\n",
+    "    resonance_mass = sp.Symbol(f\"m_{{{decay_chain.resonance.latex}}}\", nonnegative=True)\n",
+    "    resonance_width = sp.Symbol(\n",
+    "        Rf\"\\Gamma_{{{decay_chain.resonance.latex}}}\", nonnegative=True\n",
+    "    )\n",
     "    R_dec = sp.Symbol(R\"R_\\mathrm{res}\")\n",
     "    R_prod = sp.Symbol(R\"R_{\\Lambda_c}\")\n",
     "    parameter_defaults = {\n",
@@ -292,25 +230,28 @@
     "    return dynamics, parameter_defaults\n",
     "\n",
     "\n",
-    "def _get_mandelstam_s(decay: ThreeBodyDecayChain) -> sp.Symbol:\n",
+    "def _create_mass_symbol(particle: IsobarNode | Particle) -> sp.Symbol:\n",
+    "    particle = get_particle(particle)\n",
+    "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)\n",
+    "\n",
+    "\n",
+    "def _get_mandelstam_s(decay: ThreeBodyDecayChain | IsobarNode) -> sp.Symbol:\n",
     "    s1, s2, s3 = sp.symbols(\"sigma1:4\", nonnegative=True)\n",
-    "    m1, m2, m3 = map(_to_mass_symbol, [p, π, K])\n",
-    "    decay_masses = {_to_mass_symbol(p) for p in decay.decay_products}\n",
-    "    if decay_masses == {m2, m3}:\n",
+    "    decay_products = {p.name for p in _get_decay_products(decay)}\n",
+    "    if decay_products == {\"p\", \"pi+\"}:\n",
     "        return s1\n",
-    "    if decay_masses == {m1, m3}:\n",
+    "    if decay_products == {\"pi+\", \"K-\"}:\n",
     "        return s2\n",
-    "    if decay_masses == {m1, m2}:\n",
+    "    if decay_products == {\"K-\", \"p\"}:\n",
     "        return s3\n",
-    "    msg = f\"Cannot find Mandelstam variable for {''.join(decay_masses)}\"\n",
+    "    msg = f\"Cannot find Mandelstam variable for {', '.join(decay_products)}\"\n",
     "    raise NotImplementedError(msg)\n",
     "\n",
     "\n",
-    "def _to_mass_symbol(particle: Particle) -> sp.Symbol:\n",
-    "    state_id = PARTICLE_TO_ID.get(particle)\n",
-    "    if state_id is not None:\n",
-    "        return sp.Symbol(f\"m{state_id}\", nonnegative=True)\n",
-    "    return sp.Symbol(f\"m_{{{particle.latex}}}\", nonnegative=True)"
+    "def _get_decay_products(decay: ThreeBodyDecayChain | IsobarNode) -> list[Particle]:\n",
+    "    if isinstance(decay, ThreeBodyDecayChain):\n",
+    "        return decay.decay_products\n",
+    "    return decay.children"
    ]
   },
   {
@@ -371,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
